--- a/WEBPHP_2023/public/css/style.css
+++ b/WEBPHP_2023/public/css/style.css
@@ -10,3 +10,17 @@ body {
     font-size: 100px;
 }
 
+.link {
+    text-decoration: none;
+    color: black;
+}
+
+.list-item {
+    border-bottom: 1px solid lightgray;
+}
+
+.list-box {
+    border: 1px solid lightgray;
+    border-radius: 5px;
+}
+
