--- a/WEBPHP_2023/public/css/style.css
+++ b/WEBPHP_2023/public/css/style.css
@@ -1,9 +1,5 @@
 nav {
-    background-color: #90def4;
-}
-
-body {
-    background-color: #daf4fb;
+    background-color: lightgray;
 }
 
 .trackrLogo {
